--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <h1 style="display: flex; justify-content: center; align-items: center;">ONG- AYUDA A UN PELUDO</h1>
     <hr>
     <div style="display: flex; justify-content: center; align-items: center;">
-        <P style="width: 50%;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis magnam quaerat optio perferendis nihil voluptas ad deleniti earum, nulla aliquam provident placeat accusamus totam! Dolores consequatur quae maxime ullam quisquam.</P>
+        <P style="width: 50%;">Somos una organizacion sin fines de lucro que busca ayudar a los animales y mas especificamente
+            ayudar a aquellos animalitos que no tienen un lugar donde vivir y desempeñarse bien como deberia ser.
+        
+        </P>
     </div>
     <hr>
     <h2 style="display: flex; justify-content: center; align-items: center;">Nuestros Integrantes: </h2>
